# schedule-ai-os

./: .gitignore  CLAUDE.md  PROJECT_OVERVIEW.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.docs/progress/: 260114_google-calendar-tests.md
.github/workflows/: release-mobile.yml  release.yml
chrome-extension/: background.js  install-native-host.sh  manifest.json  package.json  popup.css  popup.html  popup.js  uninstall-native-host.sh
chrome-extension/scripts/: build.mjs
docs/: README.md  ROADMAP.md
docs/plans/: 00-project-overview.md  01-architecture.md  02-data-model.md  03-llm-integration.md  04-markdown-data-portability.md  05-progress-tracking.md  06-recurring-plans.md  07-focus-mode.md  08-i18n.md  09-website-distribution.md  10-01-server-init.md  10-02-google-oauth.md  10-03-llm-proxy.md  10-04-client-integration.md  10-05-stripe-subscription.md  10-06-cloud-sync.md  10-subscription-server.md  11-mobile-platform.md
docs/progress/: 2025-01-14-today-ai-input-toggle.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
docs/troubleshooting/: 260114_mobile-header-overflow.md  260114_tauri-plugin-version-mismatch.md  README.md  chrome-extension-native-host-sync.md  focus-mode-improvements.md  focus-to-today-date.md  global-shortcut-when-closed.md  tab-switch-keyboard-shortcuts.md  time-input-locale.md  windows-ipc-not-supported.md
schedule-ai-host/: Cargo.toml
schedule-ai-host/src/: main.rs
schedule-ai-server/: .env.example  Cargo.toml  docker-compose.yml
schedule-ai-server/migrations/: 001_initial.sql  002_users.sql  003_google_calendar.sql
schedule-ai-server/src/: config.rs  error.rs  main.rs
schedule-ai-server/src/middleware/: auth.rs
schedule-ai-server/src/models/: calendar.rs  mod.rs  user.rs
schedule-ai-server/src/routes/: auth.rs  calendar.rs  calendar_auth.rs  health.rs  mod.rs
schedule-ai-server/src/services/: auth.rs  calendar.rs  mod.rs
schedule-ai-tauri/: .env.example  package.json  tailwind.config.js  vitest.config.ts
schedule-ai-tauri/src/: App.css  App.tsx  main.tsx
schedule-ai-tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
schedule-ai-tauri/src-tauri/capabilities/: default.json
schedule-ai-tauri/src-tauri/icons/: icon.icns
schedule-ai-tauri/src-tauri/src/: ipc_server.rs  lib.rs  main.rs
schedule-ai-tauri/src-tauri/src/commands/: llm.rs
schedule-ai-tauri/src-tauri/src/db/migrations/: 001_initial.sql  002_progress_tracking.sql  003_recurring_plans.sql  004_task_location.sql  005_focus_block_stats.sql
schedule-ai-tauri/src-tauri/src/export/: mod.rs
schedule-ai-tauri/src-tauri/src/focus/: mod.rs
schedule-ai-tauri/src-tauri/src/google_auth/: mod.rs
schedule-ai-tauri/src-tauri/src/import/: mod.rs
schedule-ai-tauri/src-tauri/src/llm/: mod.rs
schedule-ai-tauri/src-tauri/src/models/: mod.rs
schedule-ai-tauri/src-tauri/src/progress/: mod.rs
schedule-ai-tauri/src-tauri/src/recurring/: mod.rs
schedule-ai-web/: package.json  pnpm-lock.yaml
schedule-ai-web/messages/: en.json  ko.json
scripts/: generate-icons.mjs  generate-master-icon.mjs
(+86 files in other folders)
