[package]
name = "schedule-ai-host"
version = "0.1.0"
edition = "2021"
description = "Native Messaging Host for Schedule AI Chrome Extension"
authors = ["Schedule AI"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
