[package]
name = "schedule-ai-server"
version = "0.1.0"
edition = "2021"
description = "Backend server for Schedule AI (subscription, LLM proxy, sync)"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# OAuth & JWT
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
