[package]
name = "schedule-ai-desktop"
version = "0.1.7"
description = "ADHD-friendly Schedule Management App"
authors = ["you"]
edition = "2021"

[lib]
name = "schedule_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSWindow",
    "NSApplication",
] }
objc2-foundation = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
nix = { version = "0.29", features = ["signal", "process"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
